Hopefully fixed error of stuff not showing up

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .question-verification {
-    background: #fff url('./questions/verification.png');
+    background: #fff url('./questions/verification.PNG');
     background-size: cover;
     width: 800;
     height: 450;
@@ -34,7 +34,7 @@
 }
 
 .question-chopin {
-    background: #fff url('./questions/chopin.png');
+    background: #fff url('./questions/chopin.PNG');
     background-size: cover;
     width: 800;
     height: 450;
